app/globals.css
@import "tailwindcss";

:root {
  --theme-cyan: #68E3E8;
  --theme-orange: #FBB006;
  --theme-purple: #443BFF;
  --theme-black: #012031;
  --theme-magenta: #F849C1;
  --theme-green: #32CD32;
  --theme-white: #FFF;

  --background-faded-cyan: #E4F1F1;
  --background-faded-orange: #F3EBDA;

  --background: var(--theme-white);
  --foreground: var(--theme-black);
}

@theme inline {
  --color-theme-cyan: var(--theme-cyan);
  --color-theme-orange: var(--theme-orange);
  --color-theme-purple: var(--theme-purple);
  --color-theme-black: var(--theme-black);
  --color-theme-magenta: var(--theme-magenta);
  --color-theme-green: var(--theme-green);
  --color-theme-white: var(--theme-white);

  --background-faded-cyan: var(--background-faded-cyan);
  --background-faded-orange: var(--background-faded-orange);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

html {
  background: var(--theme-black);
}

body {
  background-image:
    linear-gradient(90deg, rgba(0,0,0,0.2) 0.1ch, transparent 0.1ch),
    linear-gradient(rgba(0,0,0,0.2) 0.1ch, transparent 0.1ch),
    linear-gradient(to right, var(--background-faded-orange), var(--background-faded-cyan));
  background-size: 1rem 1rem, 1rem 1rem, 100% 100%;
  color: var(--foreground);
  font-family: var(--font-recursive), ui-sans-serif, system-ui, sans-serif;
}

a strong {
  /* Tailwind default is 900 -- a bit much */
  font-weight: 700;
}

